# RegionAI

./: .coverage  .gitignore  ABSTRACT_DOMAIN_CONSOLIDATION_SUMMARY.md  CHECKPOINT.md  CLAUDE.md  CURRICULUM_UNIFICATION_SUMMARY.md  FOUNDATION_FIXES_SUMMARY.md  GEMINI.md  INSIGHTS.md  LICENSE  MAIN.md  PROGRESS_NOTE_DAY19.md  PROGRESS_NOTE_DAY23.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  RESTRUCTURE_SUMMARY.md  SYSTEM_CAPABILITIES_AND_ROADMAP.md  TEST_REPORT.md  VERIFY_SCRIPTS_MIGRATION.md  VERIFY_SCRIPTS_REMOVAL_SUMMARY.md  archive_old_curricula.sh  archive_old_discovery.sh  archive_verify_scripts.sh  codebase_review.md  consolidate_tests.sh  demo.py  demo_action_discovery.py  demo_behavioral_summaries.py  demo_corrected_multispace.py  demo_doc_generation.py  demo_grammar_extraction.py  demo_multispace.py  demo_sequential_analysis.py  demo_simple_multispace.py  fix_test_paths.py  get_stats.sh  interprocedural_null_debug_summary.md  pyproject.toml  pytest.ini  requirements-dev.txt  (+13 more)
docs/: week3_planning.md
modules/: index.json
notebooks/: 01_exploration.ipynb
progress_notes/: 09_call_graph_implementation.md  10_function_summary_implementation.md  PROGRESS_NOTE_ABSTRACT_INTERPRETATION.md  PROGRESS_NOTE_ALGEBRAIC_OPTIMIZATIONS.md  PROGRESS_NOTE_COMPLETE_FRAMEWORK.md  PROGRESS_NOTE_CONDITIONAL_LOGIC.md  PROGRESS_NOTE_DATA_FLOW_ANALYSIS.md  PROGRESS_NOTE_DAY22.md  PROGRESS_NOTE_DAY25_26.md  PROGRESS_NOTE_DAY27_28.md  PROGRESS_NOTE_DAY29.md  PROGRESS_NOTE_DAY_30_31.md  PROGRESS_NOTE_EVALUATION_OPTIMIZATIONS.md  PROGRESS_NOTE_FIXPOINT_ANALYSIS.md  (+6 more)
scripts/: README.md  (+21 more)
(+511 files in other folders)
