[tool.poetry]
name = "regionai"
version = "0.1.0"
description = "Region-based embeddings for language models"
authors = ["agheieff <agheieff@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/agheieff/RegionAI"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
matplotlib = "^3.5.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.1.0"
jupyterlab = "^4.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"